--- a/front-end/src/index.scss
+++ b/front-end/src/index.scss
@@ -1,8 +1,12 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
-    transition: background-color 0.5s ease, color 0.5s ease;
+    font-family: "Inter", sans-serif !important;
+}
+
+body {
+    min-width: 553px;
+    background-color: #FCFDFF;
 }
 
 h1 {
@@ -12,10 +16,10 @@ h1 {
 }
 
 .error {
-    color: #ff4d4d;
-    font-weight: bold;
-    font-size: 14px;
-    margin-top: 5px;
     display: block;
     position: static;
+    color: #D32F2F !important;
+    font-size: 14px;
+    font-weight: bold;
+    margin: 8px 0 -14px 16px !important;
 }
