--- a/front-end/src/pages/Login/Login.scss
+++ b/front-end/src/pages/Login/Login.scss
@@ -1,14 +1,23 @@
 .login-container {
+    margin: 80px 0 80px;
+    padding: 40px 24px;
+    width: 100%;
+    border-radius: 16px;
     display: flex;
-    align-items: center;
     flex-direction: column;
-}
+    background-color: #F9FAFB;
+    max-width: 400px;
+    box-shadow: 0 2px 88px 0 #322F2A14;
 
-.login-button {
-    font-weight: 500;
-    height: 40px;
-    width: 80px;
-    transition: all 0.3s ease;
-    border-width: 2px;
-    cursor: pointer;
+    .login-button {
+        font-weight: 700;
+        text-transform: unset;
+        min-width: 64px;
+        width: 100%;
+        color: #FFFFFF;
+        background-color: #7F2203;
+        min-height: 48px;
+        padding: 8px 22px;
+        border-radius: 10px;
+    }
 }
