--- a/front-end/src/pages/Register/Register.scss
+++ b/front-end/src/pages/Register/Register.scss
@@ -1,189 +1,23 @@
-.registrationContainer {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-
-.registrationContainer-dark {
-    color: #ffffff;
-}
-
-.registrationContainer-light {
-    color: #000000;
-}
-
-.registrationForm {
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    align-items: flex-start;
-    margin-top: 20px;
-}
-
-.row {
-    display: flex;
-    gap: 50px;
-    justify-content: flex-start;
-    margin-bottom: 25px;
-}
-
-.column {
-    display: flex;
-    flex-direction: column;
-}
-
-/* Field */
-.fieldContainer {
-    flex: 1;
-    min-width: 150px;
-}
-
-.registrationField {
-    cursor: default;
+.register-container {
+    margin: 80px 0 80px;
+    padding: 40px 24px;
     width: 100%;
-    padding: 12px;
-    font-size: 16px;
-    border: 2px solid #ccc;
-    border-radius: 5px;
-    outline: none;
-    transition: border-color 0.3s ease;
-    box-sizing: border-box;
-}
-
-.registrationField:focus {
-    border-color: #909297;
-}
-
-/* Button */
-.registrationButton {
-    padding: 12px 20px;
-    font-size: 16px;
-    color: #fff;
-    background-color: #909297;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    width: 100%;
-    text-align: center;
-}
-
-.registrationButton:hover {
-    background-color: #605c5c;
-}
-
-/* Select */
-select {
-    color: black;
-}
-
-select:has(option[value=""]:checked) {
-    color: gray;
-}
-
-select option {
-    color: black;
-}
-
-select.registrationField {
-    appearance: none;
-    background-color: #fff;
-    height: 48px;
-}
-
-/* Checkbox */
-.checkboxContainer {
-    display: flex;
-    gap: 15px;
-    margin-bottom: 20px;
-}
-
-.checkboxLabel {
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.checkboxField {
-    appearance: none;
-    width: 20px;
-    height: 20px;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    transition: background-color 0.3s ease, border-color 0.3s ease;
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-}
-
-.checkboxField:checked {
-    background-color: #909297;
-    border-color: #605c5c;
-}
-
-.checkboxField:checked::after {
-    content: '';
-    position: absolute;
-    top: 3px;
-    left: 6px;
-    width: 5px;
-    height: 10px;
-    border: solid white;
-    border-width: 0 2px 2px 0;
-    transform: rotate(45deg);
-}
-
-.checkboxField:hover {
-    border-color: #909297;
-}
-
-/* Radio */
-.radioContainer {
-    margin-bottom: 20px;
+    border-radius: 16px;
     display: flex;
     flex-direction: column;
-    gap: 15px;
-}
+    background-color: #F9FAFB;
+    max-width: 400px;
+    box-shadow: 0 2px 88px 0 #322F2A14;
 
-.radioContainer label {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-.radioContainer input[type="radio"] {
-    appearance: none;
-    width: 20px;
-    height: 20px;
-    border: 2px solid #ccc;
-    border-radius: 50%;
-    outline: none;
-    transition: background-color 0.3s ease, border-color 0.3s ease;
-    cursor: pointer;
-    position: relative;
-}
-
-.radioContainer input[type="radio"]:checked {
-    background-color: #909297;
-    border-color: #605c5c;
-}
-
-.radioContainer input[type="radio"]:checked::after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 10px;
-    height: 10px;
-    background-color: white;
-    border-radius: 50%;
-}
-
-.radioContainer input[type="radio"]:hover {
-    border-color: #909297;
+    .register-button {
+        font-weight: 700;
+        text-transform: unset;
+        min-width: 64px;
+        width: 100%;
+        color: #FFFFFF;
+        background-color: #7F2203;
+        min-height: 48px;
+        padding: 8px 22px;
+        border-radius: 10px;
+    }
 }
