--- a/front-end/src/components/Layout/index.scss
+++ b/front-end/src/components/Layout/index.scss
@@ -1,7 +1,4 @@
-$light-bg: #f5f5f5;
-$light-text: #212121;
-$dark-bg: #212121;
-$dark-text: #efebe9;
+@import '../../styles/variables.scss';
 
 .layout {
     display: flex;
@@ -9,16 +6,8 @@ $dark-text: #efebe9;
     width: 100%;
     min-height: 100vh;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
-
-    &.light {
-        background-color: $light-bg;
-        color: $light-text;
-    }
-
-    &.dark {
-        background-color: $dark-bg;
-        color: $dark-text;
-    }
+    background-color: var(--primary-bg);
+    color: var(--primary-text);
 }
 
 .header {
@@ -27,16 +16,8 @@ $dark-text: #efebe9;
     align-items: center;
     height: 110px;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
-
-    &.light {
-        background-color: $light-bg;
-        color: $light-text;
-    }
-
-    &.dark {
-        background-color: $dark-bg;
-        color: $dark-text;
-    }
+    background-color: var(--primary-bg);
+    color: var(--primary-text);
 
     .logo {
         height: 52px;
@@ -51,7 +32,6 @@ $dark-text: #efebe9;
         width: 80%;
 
         .nav-button {
-            text-transform: capitalize;
             transition: color 0.3s ease-in-out;
             color: #959493;
 
@@ -61,8 +41,8 @@ $dark-text: #efebe9;
 
             &.active {
                 background-color: inherit;
-                color: #322F2A;
-                border-bottom: 2px solid #322F2A;
+                color: var(--primary-text);
+                border-bottom: 2px solid var(--primary-text);
 
                 &:hover {
                     background-color: rgba(50, 47, 42, 0.15);
@@ -111,14 +91,8 @@ $dark-text: #efebe9;
     padding: 42px 0;
     margin-top: 20px;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
+    background-color: #1A1A1A;
 
-    &.light {
-        background-color: #1A1A1A;
-    }
-
-    &.dark {
-        background-color: #212121;
-    }
 
     .footer-container {
         width: 85%;
