--- a/front-end/src/pages/Hotels/HotelsLeftFilter.module.scss
+++ b/front-end/src/pages/Hotels/HotelsLeftFilter.module.scss
@@ -6,7 +6,7 @@
   width: 100%;
 
   .filterName {
-    color: var(--Neutral-500, #565656);
+    color: var(--second-text);
     font-size: 24px;
     font-weight: 500;
   }
