--- a/front-end/src/components/HotelCard/HotelCard.scss
+++ b/front-end/src/components/HotelCard/HotelCard.scss
@@ -64,3 +64,9 @@
     }
   }
 }
+
+.hotel-card:hover {
+  transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(0,0,0,0.10);
+}
