--- a/front-end/src/components/Layout/index.scss
+++ b/front-end/src/components/Layout/index.scss
@@ -58,7 +58,7 @@
             text-transform: capitalize;
             box-shadow: none;
             transition: color 0.3s ease-in-out;
-            background-color: #7F2203;
+            background-color: var(--accent);
             color: #FCFDFF;
         }
     }
@@ -286,7 +286,7 @@
 
     .newsletter-button {
         color: #FCFDFF;
-        background-color: #7F2203;
+        background-color: var(--accent);
         width: 134px;
         height: 50px;
         border-radius: 12px;
