--- a/front-end/src/pages/Register/Register.scss
+++ b/front-end/src/pages/Register/Register.scss
@@ -18,7 +18,7 @@
         min-width: 64px;
         width: 100%;
         color: #FFFFFF;
-        background-color: #7F2203;
+        background-color: var(--accent);
         min-height: 48px;
         padding: 8px 22px;
         border-radius: 10px;
