The hotels list page was adapted to mobile devices The hotels list page theme was upgraded

--- a/front-end/src/components/HotelFeature/HotelFeature.module.scss
+++ b/front-end/src/components/HotelFeature/HotelFeature.module.scss
@@ -2,7 +2,6 @@
   display: flex;
   align-items: center;
   gap: 4px;
-  color: #565656;
-  font-size: 12px;
+  color: var(--second-text);
   line-height: 20px;
 }
