--- a/front-end/src/pages/Hotels/Hotels.scss
+++ b/front-end/src/pages/Hotels/Hotels.scss
@@ -2,6 +2,13 @@
 
 .hotels-list-pagination {
   width: 100%;
+
+  .hotels-list-container {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+  }
+
   button {
     &:disabled {
       .pagination-icon {
@@ -15,9 +22,69 @@
     }
   }
 
-  .hotels-list-container {
+  .no-hotels {
+    margin-top: 200px;
+    color: var(--accent);
+    width: 100%;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+  }
+
+  .pagination-controls {
     display: flex;
-    flex-direction: column;
-    gap: 18px;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 32px;
+
+    .favorites-button {
+      width: 290px;
+      height: 48px;
+      text-transform: none;
+      border-radius: 4px;
+      border: 1px solid #C3731C;
+      background: var(--Neutral-White, #FFF);
+      color: #C3731C;
+      padding: 8px 16px;
+      font-size: 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .rounded-favorite-icon {
+        background: var(--Neutral-Black, #000);
+        font-size: 20px;
+        opacity: 0.7;
+        border-radius: 50%;
+        padding: 4px;
+        margin-left: 10px;
+      }
+    }
+
+    .page-nav {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .page-number {
+        margin: 0 16px;
+      }
+    }
+  }
+
+  @media (max-width: 700px) {
+    .pagination-controls {
+      flex-direction: column;
+      align-items: stretch;
+      gap: 16px;
+
+      .favorites-button {
+        width: 100%;
+      }
+
+      .page-nav {
+        margin-top: 16px;
+      }
+    }
   }
 }
