--- a/front-end/src/pages/Profile/Profile.scss
+++ b/front-end/src/pages/Profile/Profile.scss
@@ -9,15 +9,16 @@
     flex-direction: column;
     color: var(--primary-text);
     background-color: var(--second-bg);
-    max-width: 400px;
+    max-width: 600px;
     box-shadow: 0 2px 88px 0 #322F2A14;
 
     .profile-button {
         margin-top: 12px;
         padding: 12px;
+        font-size: 16px;
         background-color: #C3731C;
         text-transform: none;
-        font-weight: 700;
+        font-weight: 400;
     }
 
     .profile-field {
