--- a/front-end/src/components/HotelCard/HotelCard.scss
+++ b/front-end/src/components/HotelCard/HotelCard.scss
@@ -68,5 +68,5 @@
 .hotel-card:hover {
   transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
   transform: translateY(-5px);
-  box-shadow: 0 10px 20px rgba(0,0,0,0.10);
+  box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
 }
