--- a/front-end/src/pages/About/About.scss
+++ b/front-end/src/pages/About/About.scss
@@ -40,7 +40,7 @@
       .button:hover {
         transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
         transform: translateY(-5px);
-        box-shadow: 0 10px 20px rgba(0,0,0,0.10);
+        box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
       }
     }
 
@@ -52,7 +52,7 @@
     .card-content:hover {
       transition: transform 0.3s ease-out, box-shadow 0.3s ease-out;
       transform: translateY(-5px);
-      box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+      box-shadow: 0 10px 20px rgb(0 0 0 / 15%);
     }
   }
 }
