--- a/front-end/src/pages/Home/Home.scss
+++ b/front-end/src/pages/Home/Home.scss
@@ -12,7 +12,7 @@
 .banner {
   display: flex;
   align-content: center;
-  margin: 65px 0 65px 0;
+  margin: 65px 0;
   width: 70vw;
   max-width: 1072px;
   background-size: cover;
@@ -122,14 +122,14 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 61px 0 61px 0;
+    margin: 61px 0;
     color: var(--primary-text);
 
     .button {
       height: 34px;
       border-radius: 8px;
       background-color: #C3731C;
-      color: #FFFFFF;
+      color: #FFF;
       font-size: 14px;
       font-weight: 400;
       text-transform: none;
