--- a/front-end/src/pages/Hotels/HotelsPriceFilter.module.scss
+++ b/front-end/src/pages/Hotels/HotelsPriceFilter.module.scss
@@ -6,12 +6,12 @@
 .priceField {
   input {
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
   }
 
   input[type="number"]::-webkit-outer-spin-button,
   input[type="number"]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
+    appearance: none;
     margin: 0;
   }
 }
