--- a/front-end/src/pages/Register/Register.scss
+++ b/front-end/src/pages/Register/Register.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables.scss';
 
 .register-container {
-    margin: 80px 0 80px;
+    margin: 80px 0;
     padding: 40px 24px;
     width: 100%;
     border-radius: 16px;
@@ -17,7 +17,7 @@
         text-transform: unset;
         min-width: 64px;
         width: 100%;
-        color: #FFFFFF;
+        color: #FFF;
         background-color: var(--accent);
         min-height: 48px;
         padding: 8px 22px;
