run start script was updated

--- a/front-end/src/pages/Error404/Error404.scss
+++ b/front-end/src/pages/Error404/Error404.scss
@@ -1,6 +1,8 @@
 @import "../../styles/variables.scss";
 
 .error404 {
+  height: 50vh;
+
   .text-header, .text-body {
     color: var(--accent);
     font-size: 24px;
